--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <p>It was a dark and stormy night...</p>
+    <p>Alone in the park with nothing in sight.</p>
   </body>
 
 </html>
