--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <p>It was a dark and stormy night...</p>
     <p>Alone in the park with nothing in sight.</p>
     <p>I could feel the wind on my back.</p>
+    <p>So I began to rummage through my sack</p>
   </body>
 
 </html>
