step 12 and new line

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>I could feel the wind on my back.</p>
     <p>So I began to rummage through my sack</p>
     <p>And had a heart attack, when I saw...</p>
+    <p>The Notice in canvas today from Kessler</p>
 
   </body>
 
